discussion/kv_engine/145278/145278_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-44098: Remove the 'new' file if we detect an error after creating it

The final phase of compaction moves the 'x.couch.y.compact' file to
be 'x.couch.y' and then the current revision is updated. Once the
current revision is updated and the vbLock dropped, flush now
writes to the new file.

However if an exception occurs after x.couch.y is created and
before the current revision is updated, x.couch.y remains on disk.

This could be fine if the vbucket (x) just keeps on moving forward,
however if x is deleted and created again, the new version of the
vbucket uses x.couch.y, which mixes the old and new vbucket together.

This is what finally led to the collection manifest decode function
later aborting, the vbucket merged old/new to create a new manifest
which actually just meant every collection appeared twice.

The fix in this commit is to enclose the final phase of compaction
in a try/catch block. The move of the file and finalisation code
is all moved into the try/catch block (inside the new
switchToNewFile function). A subtly of this is that the try/catch
is within the vbLock 'locked' scope, so that any exception that
is thrown is caught and handled with the vbLock held - this means
we are safe to 'rm' x.couch.y and cannot race with vbucket creation
trying to create and write to x.couch.y.

A secondary patch will be created which improves manifest write
path so it would abort before writing a broken manifest to disk.

Change-Id: I4365a0cc20d6fe2409d5c3d249603a8e69ce267d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2021-02-05 14:51:01.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-02-05 15:11:24.000000000
Message: 
Patch Set 4: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6954/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1552:19: error: use of undeclared identifier "switchToNewFile" [clang-diagnostic-error]
        success = switchToNewFile(vbid, new_rev, hook_ctx, prepareStats);
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1584:20: error: out-of-line definition of "switchToNewFile" does not match any declaration in "CouchKVStore" [clang-diagnostic-error]
bool CouchKVStore::switchToNewFile(
                   ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6954/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1552:19:
error: use of undeclared identifier "switchToNewFile" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6954/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33424/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\couch-kvstore\couch-kvstore.cc(1552): error C3861: "switchToNewFile": identifier not found ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33424/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28751/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1552:19:
error: use of undeclared identifier "switchToNewFile"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28751/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8539/ : FAILURE

Compile error at [2021-02-05T15:06:45.934Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1552:19:
error: ?switchToNewFile? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8539/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/8675/ : FAILURE

Compile error at [2021-02-05T15:08:50.118Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1552:19:
error: ?switchToNewFile? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/8675/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/8884/ : FAILURE

Compile error at [2021-02-05T15:09:31.775Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1552:19:
error: use of undeclared identifier "switchToNewFile"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/8884/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7593/ : FAILURE

Compile error at [2021-02-05T14:52:03.617Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1552:19:
error: use of undeclared identifier "switchToNewFile"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7593/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16431/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/5491/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
